--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^4.0.1",
     "styled-breakpoints": "^7.1.0",
     "styled-components": "^4.4.1",
+    "styled-components.macro": "^1.0.0",
     "styled-media-query": "^2.1.2",
     "styled-reset": "^4.0.8",
     "styled-system": "^5.1.5",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.22.0",
