--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "stoic-quotes",
+  "name": "stoic-quotes-dev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@types/styled-components": "^5.1.4",
+    "animate-css-styled-components": "^1.0.2",
     "axios": "^0.20.0",
     "node-fetch": "^2.6.1",
     "react": "^16.12.0",
@@ -45,6 +46,12 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-essentials": "^6.1.11",
+    "@storybook/addon-links": "^6.1.11",
+    "@storybook/node-logger": "^6.1.11",
+    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/react": "^6.1.11",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint-config-airbnb": "^18.2.0",
