added corepack package manager

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "styled-reset": "^4.0.8",
     "unsplash-js": "^6.0.0"
   },
+    "packageManager": "yarn@3.2.3+sha224.953c8233f7a92884eee2de69a1b92d1f2ec1655e66d08071ba9a02fa",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
