--- a/package.json
+++ b/package.json
@@ -1,53 +1,4 @@
 {
-  "name": "stoic-quotes",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^0.20.0",
-    "node-fetch": "^2.6.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-query": "^2.23.1",
-    "react-query-devtools": "^2.6.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
-    "styled-breakpoints": "^7.1.0",
-    "styled-components": "^4.4.1",
-    "styled-media-query": "^2.1.2",
-    "styled-reset": "^4.0.8",
-    "unsplash-js": "^6.0.0"
-  },
-    "packageManager": "yarn@3.2.3+sha224.953c8233f7a92884eee2de69a1b92d1f2ec1655e66d08071ba9a02fa",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.2",
-    "prettier": "^2.1.2",
-    "react-test-renderer": "^16.12.0"
-  }
+  "name": "stoic-quotes-dashboard",
+  "packageManager": "yarn@3.4.1"
 }
