--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^1.3.4",
-    "node-fetch": "^2.6.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-query": "^2.23.1",
-    "react-query-devtools": "^2.6.0",
-    "react-router-dom": "^5.2.0",
+    "node-fetch": "^3.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
-    "styled-breakpoints": "^7.1.0",
-    "styled-components": "^4.4.1",
+    "styled-breakpoints": "^11.1.1",
+    "styled-components": "^5.3.9",
     "styled-media-query": "^2.1.2",
-    "styled-reset": "^4.0.8",
+    "styled-reset": "^4.4.5",
     "unsplash-js": "^7.0.15"
   },
   "scripts": {
@@ -39,19 +38,25 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "babel-eslint": "^10.1.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.2",
-    "prettier": "^2.1.2",
-    "react-test-renderer": "^16.12.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.7",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   }
 }
