--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "tsc --outDir ./build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
