--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.3.4",
+    "@babel/parser": "^7.21.8",
+    "@babel/types": "^7.21.5",
+    "axios": "^1.4.0",
+    "csstype": "^3.1.2",
+    "expect": "^29.5.0",
     "node-fetch": "^3.3.1",
+    "pretty-format": "^29.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -13,12 +18,12 @@
     "styled-breakpoints": "^11.1.1",
     "styled-components": "^5.3.9",
     "styled-media-query": "^2.1.2",
-    "styled-reset": "^4.4.5",
+    "styled-reset": "^4.4.7",
     "unsplash-js": "^7.0.15"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "tsc --outDir ./build",
+    "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
